# skating-biomechanics-ml

./: .containerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Containerfile  README.md  ROADMAP.md  Taskfile.yml  compose.yaml  lefthook.yml  package.json  pyproject.toml  renovate.json  renovate.json5  sgconfig.yml
backend/: CLAUDE.md  Containerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_11_0826-542c5d1f91f0_initial_users_and_refresh_tokens.py  2026_04_11_1907-6b02b4ec0d77_add_sessions_and_relationships.py  2026_04_16_1722-8468345cba68_add_pose_data_columns.py  2026_04_17_1832-1541cafaf37d_add_video_key_columns.py  2026_04_17_1908-7e23d891c6d7_relationships_to_connections.py  2026_04_19_1448-7c318ee90e4a_add_music_fingerprint.py  2026_04_20_1340-a5a7881165d4_increase_fingerprint_to_64.py
backend/app/: config.py  database.py  logging_config.py  main.py  metrics_registry.py  schemas.py  storage.py  task_manager.py  worker.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/crud/: choreography.py  connection.py  refresh_token.py  relationship.py  session.py  session_metric.py  user.py
backend/app/models/: __init__.py  choreography.py  connection.py  refresh_token.py  relationship.py  session.py  user.py
backend/app/routes/: auth.py  choreography.py  connections.py  detect.py  metrics.py  misc.py  process.py  relationships.py  sessions.py  uploads.py  users.py
backend/app/services/: diagnostics.py  pr_tracker.py  session_saver.py
backend/app/vastai/: client.py
backend/tests/: conftest.py  test_auth_routes.py  test_deps.py  test_diagnostics.py  test_metrics_registry.py  test_models.py  test_storage.py  test_task_manager.py  test_task_manager_unit.py  test_vastai_client.py  test_vastai_client_extended.py
backend/tests/backend/: conftest.py  test_diagnostics.py  test_metrics_registry.py  test_pr_tracker.py  test_security.py  test_user_routes.py
backend/tests/crud/: test_choreography_crud.py  test_connection.py  test_refresh_token.py  test_session.py  test_session_metric.py  test_session_metric_batch.py  test_user.py
backend/tests/models/: test_choreography_models.py
backend/tests/routes/: test_auth_direct.py  test_choreography_upload.py  test_connections.py  test_connections_direct.py  test_detect.py  test_metrics.py  test_metrics_direct.py  test_misc.py  test_models.py  test_process.py  test_sessions.py  test_sessions_direct.py  test_uploads.py
backend/tests/services/: test_session_saver.py
backend/tests/worker/: __init__.py  test_music_worker.py  test_worker_pure.py  test_worker_tasks.py
ml/: CLAUDE.md  GPU_OPTIMIZATION_ANALYSIS_2026-04-18.md  GPU_OPTIMIZATION_SUMMARY.md  pyproject.toml
ml/docs/: PIPELINE_ARCHITECTURE_COMPARISON.md  PIPELINE_DEPENDENCY_GRAPH.dot  PIPELINE_PARALLELISM_DESIGN.md  PIPELINE_PARALLELIZATION_ANALYSIS.md  PIPELINE_PARALLELIZATION_FINAL_SYNTHESIS.md  PIPELINE_PARALLELIZATION_INDEX.md  PIPELINE_PARALLELIZATION_MERMAID.md  PIPELINE_PARALLELIZATION_QUICKREF.md  PIPELINE_PARALLELIZATION_SUMMARY.md  profiling_results.md
ml/gpu_server/: Containerfile  server.py
ml/scripts/: batch_validate_labels.py  benchmark_batch_inference.py  benchmark_numba.py  benchmark_numba_comparison.py  benchmark_pose_extraction.py  build_references.py  check_all.py  compare_models.py  compare_videos.py  download_ml_models.py  e2e_test_oofskate.py  normalize_video.py  organize_dataset.py  prepare_athletepose3d.py  profile_pipeline.py  pseudo_label_skatingverse.py  quantize_rtmo_fp16.py  setup_cuda_compat.sh  train_yolo26_pose.py  train_yolo26n_distill.py  visualize_segmentation.py  visualize_with_skeleton.py
ml/skating_ml/: __init__.py  cli.py  device.py  pipeline.py  types.py  web_helpers.py  worker.py
ml/skating_ml/alignment/: __init__.py  aligner.py  motion_dtw.py
ml/skating_ml/analysis/: __init__.py  angles.py  element_defs.py  element_segmenter.py  metrics.py  physics_engine.py  recommender.py
ml/skating_ml/datasets/: coco_builder.py  projector.py
ml/skating_ml/detection/: __init__.py  blade_edge_detector_3d.py  person_detector.py  spatial_reference.py
ml/skating_ml/extras/: __init__.py  depth_anything.py  foot_tracker.py  inpainting.py  model_registry.py  optical_flow.py  segment_anything.py  video_matting.py
ml/skating_ml/pose_3d/: __init__.py  anchor_projection.py  athletepose_extractor.py  corrective_pipeline.py  kinematic_constraints.py  normalizer_3d.py  tcpformer_extractor.py
ml/skating_ml/pose_estimation/: __init__.py  h36m.py  halpe26.py  multi_gpu_extractor.py  normalizer.py  rtmlib_extractor.py
ml/skating_ml/references/: __init__.py  reference_builder.py
ml/skating_ml/tracking/: skeletal_identity.py  tracklet_merger.py
ml/skating_ml/utils/: __init__.py  gap_filling.py  geometry.py  profiler.py  profiling.py  smoothing.py  subtitles.py  video.py  video_writer.py
ml/skating_ml/vastai/: __init__.py  client.py
ml/skating_ml/visualization/: __init__.py  comparison.py  config.py  export_3d.py  export_3d_animated.py  pipeline.py
ml/src/: device.py  pipeline.py  types.py  web_helpers.py  worker.py
ml/src/analysis/: element_defs.py  metrics.py  phase_detector.py  physics_engine.py  recommender.py
ml/src/extras/: model_registry.py
ml/src/pose_3d/: onnx_extractor.py
ml/src/pose_estimation/: batch_extractor.py  pose_extractor.py  rtmo_batch.py
ml/src/utils/: frame_buffer.py  gap_filling.py  geometry.py
ml/src/vastai/: client.py
ml/tests/: conftest.py  test_coco_builder.py  test_device.py  test_gap_filling.py  test_pipeline.py  test_pipeline_parallel.py  test_projection.py  test_storage.py  test_task_manager.py  test_tracked_extraction.py  test_types.py  test_vastai_client.py  test_worker_metrics.py
ml/tests/alignment/: __init__.py  test_aligner.py  test_motion_dtw.py
ml/tests/analysis/: test_angles.py  test_metrics.py  test_metrics_numba.py  test_phase_detector.py  test_physics_engine.py  test_recommender.py
ml/tests/ml/: test_foot_tracker.py  (+5 more)
(+740 files in other folders)
