[project]
name = "skating-biomechanics-ml"
version = "0.1.0"
description = "ML-based figure skating biomechanics analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=0.3.0",       # deprecated: H36MExtractor (YOLO26-Pose backend)
    "rtmlib>=0.0.7",            # NEW: RTMPose pose estimation (HALPE26, 26kp with feet)
    "onnxruntime-gpu>=1.24.4",      # ONNX Runtime with CUDA backend for rtmlib
    "opencv-python>=4.10.0",
    "numpy>=2.0.0",
    "torch>=2.5.0",
    "dtw-python>=1.5.0",
    "scipy>=1.14.0",
    "pillow>=12.1.1",
    "timm>=1.0.26",
    "filterpy>=1.4.5",
    "anytree>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "vulture>=2.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
deepsort = ["deep-sort-realtime>=1.3.2"]

[project.scripts]
analyze = "cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR2004", # magic value comparison
    "PLC0415", # import not at top-level (lazy imports for heavy deps)
    "SIM108", # ternary instead of if-else
    "ARG002", # unused method argument (common in callback interfaces)
]
unfixable = [
    "ERA",    # don't auto-remove commented out code
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004", "ERA", "SIM117"]
"__init__.py" = ["F401"]  # unused imports
"scripts/visualize_with_skeleton.py" = ["ARG001"]
"src/analysis/rules/*.py" = ["RUF001"]  # Russian text strings with Cyrillic chars
"src/visualization/**/*.py" = ["RUF001"]  # Russian text in visualization
"src/cli.py" = ["RUF001"]  # Russian help text
"src/**/*.py" = ["ARG001", "F841"]  # unused args in callback-heavy code

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "ultralytics.*",
    "rtmlib.*",
    "onnxruntime.*",
    "dtw.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
exclude = ["__init__.py"]
make_whitelist = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
